<resources>

    <!--naming convention: https://jeroenmols.com/blog/2016/03/07/resourcenaming/-->

    <string name="app_name">La Gonette - Maps</string>

    <string name="all_format_address_full">%1$s, %2$s %3$s</string>
    <string name="all_button_allow">Autoriser</string>
    <string name="all_button_next">Suivant</string>
    <string name="all_button_finish">Go !</string>
    <string name="all_button_ok">Ok !</string>

    <string name="filters_all_categories">Toutes les catégories</string>
    <string name="filters_partners">Partenaires</string>
    <string name="filters_empty_view">"Hum… Il semblerait qu'il n'y ai pas de partenaires…"</string>

    <string name="location_detail_partner">Partenaire</string>
    <string name="location_detail_exchange_office">Partenaire + Comptoir de change</string>

    <string name="searchbar_hint">Filtrez…</string>

    <string name="shortcut_partner">Partenaire</string>
    <string name="shortcut_exchange_office">Comptoir de change</string>
    <string name="shortcut_la_gonette">La Gonette</string>

    <string name="snackbar_error_no_direction_app_found">Aucune application GPS trouvée.</string>
    <string name="snackbar_error_no_call_app_found">Aucune application téléphonique trouvée.</string>
    <string name="snackbar_error_no_browser_app_found">Aucun navigateur web trouvé.</string>
    <string name="snackbar_error_no_email_app_found">Aucune application email trouvée.</string>
    <string name="snackbar_error_getting_categories">Echec lors de la mise à jour des catégories.</string>
    <string name="snackbar_error_getting_partners">Echec lors de la mise à jour des partenaires.</string>
    <string name="snackbar_error_unknown">"Une erreur inconnue s'est produite."</string>

    <string name="onboarding_permissions_title">Autoriser la localisation ?</string>
    <string name="onboarding_permissions_subhead">La localisation permet de vous situer sur la carte afin de retrouver les partenaires près de vous.</string>
    <string name="onboarding_report_title">Autoriser les rapports d\'erreurs ?</string>
    <string name="onboarding_report_subhead">Ces rapports sont envoyés sur Crashlytics (Google) et permettent aux développeur·euse·s de corriger et d\'améliorer l\'application.</string>

    <string name="showcase_search_title">Filtrez les partenaires !</string>
    <string name="showcase_search_content">Filtrez les partenaires de toute l\'application depuis un seul endroit.</string>
    <string name="showcase_location_title">Ma position !</string>
    <string name="showcase_location_content">Cliquez ici et la carte se centrera sur vous.</string>
    <string name="showcase_filters_fab_title">Ouvrez l\'annuaire !</string>
    <string name="showcase_filters_fab_content">Retrouvez tous les partenaires de la Gonette triés par catégories.</string>
    <string name="showcase_filters_title">Bienvenue dans l\'annuaire !</string>
    <string name="showcase_filters_content">Glissez vers le haut pour accéder à la liste des partenaires.</string>
    <string name="showcase_details_title">Découvrez vos partenaires !</string>
    <string name="showcase_details_content">Glissez vers le haut pour accéder à plus de details.</string>

</resources>