<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="2dp"
    android:background="@drawable/bg_row_standalone"
    android:elevation="2dp"
    android:gravity="center"
    android:minHeight="48dp"
    android:orientation="vertical"
    tools:layout_marginTop="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_shortcut_location"
            android:layout_width="84dp"
            android:layout_height="88dp"
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/layout_shortcut_location_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:src="@drawable/bg_item_partner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/shortcut_partner"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_shortcut_exchange_office"
            android:layout_width="84dp"
            android:layout_height="88dp"
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/layout_shortcut_exchange_office_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:src="@drawable/bg_item_exchange_office" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/shortcut_exchange_office"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_shortcut_headquarter"
            android:layout_width="84dp"
            android:layout_height="88dp"
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="8dp">

            <FrameLayout
                android:id="@+id/layout_shortcut_headquarter_background"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@drawable/bg_item_category">

                <ImageView
                    android:id="@+id/view_shortcut_headquarter_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center" />

            </FrameLayout>

            <TextView
                android:id="@+id/view_shortcut_headquarter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/shortcut_la_gonette"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/shortcut_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/all_divider" />

    <LinearLayout
        android:id="@+id/shortcut_all_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="@dimen/filters_category_size"
            android:layout_height="@dimen/filters_category_size"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="@dimen/filters_category_icon_size"
                android:layout_height="@dimen/filters_category_icon_size"
                android:layout_gravity="center"
                android:background="@drawable/bg_item_category" />

        </FrameLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:text="@string/filters_all_categories"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/all_text_secondary" />

        <ImageButton
            android:id="@+id/shortcut_collapsed"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_expand_less_grey_24dp" />

        <ImageButton
            android:id="@+id/shortcut_visibility"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_visibility_accent_24dp" />

    </LinearLayout>

</LinearLayout>